# kit

./: Cargo.toml  README.md
data/: README.md  words.txt
src/: lib.rs  with_tui.rs
src/commands/: mod.rs  pomo.rs  word.rs
